@@ -4,6 +4,7 @@ import cn.itcraft.jxlsb.api.XlsbWriter;
 import cn.itcraft.jxlsb.container.SheetInfo;
 import org.junit.jupiter.api.Test;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.List;
@@ -28,7 +29,7 @@ class DemoTemplateFillTest {
     @Test
     void fillWithFixedPosition() throws IOException {
         Path templatePath = getTemplatePath();
-        Path outputPath = Path.of("/tmp/demo_output_fixed.xlsb");
+        Path outputPath = Paths.get("/tmp/demo_output_fixed.xlsb");
         
         System.out.println("=== 固定位置填充测试 ===");
         System.out.println("模板: src/test/resources/template/demo_template.xlsb");
@@ -66,7 +67,7 @@ class DemoTemplateFillTest {
     @Test
     void fillWithMarker() throws IOException {
         Path templatePath = getTemplatePath();
-        Path outputPath = Path.of("/tmp/demo_output_marker.xlsb");
+        Path outputPath = Paths.get("/tmp/demo_output_marker.xlsb");
         
         System.out.println("=== 标记查找填充测试 ===");
         System.out.println("模板: src/test/resources/template/demo_template.xlsb");
@@ -97,7 +98,7 @@ class DemoTemplateFillTest {
     @Test
     void streamingFill() throws IOException {
         Path templatePath = getTemplatePath();
-        Path outputPath = Path.of("/tmp/demo_output_streaming.xlsb");
+        Path outputPath = Paths.get("/tmp/demo_output_streaming.xlsb");
         
         System.out.println("=== 流式填充测试 ===");
         System.out.println("模板: src/test/resources/template/demo_template.xlsb");
